# Halluzination

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  redis_client.py  schemas.py
backend/app/models/: __init__.py  buzzer_event.py  game.py  location.py  participant.py  quiz_response.py  round.py
backend/app/routes/: __init__.py  auth.py  export_import.py  games.py  locations.py  participants.py  rounds.py
backend/app/socket/: events.py  manager.py
backend/migrations/: env.py
backend/migrations/versions/: 039e74b62fbd_make_target_year_nullable.py  4e59088eb156_initial_schema.py  8f2a91c3b4d5_add_filename_columns_to_rounds.py  f3d3bfe9ab6b_add_unique_constraint_username_per_game.py
caddy/: Caddyfile
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/lib/: api.ts  socket.ts  types.ts
frontend/src/lib/components/: ImageCompareSlider.svelte
frontend/src/lib/components/admin/: ConfirmDialog.svelte  ImageUploadField.svelte  RoundCard.svelte  RoundFormModal.svelte
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/admin/: +layout.svelte  +page.svelte
frontend/src/routes/admin/[uuid]/: +page.svelte
frontend/src/routes/play/: +page.svelte
frontend/src/routes/play/[uuid]/: +page.svelte
frontend/src/routes/present/: +page.svelte
frontend/src/routes/present/[uuid]/: +page.svelte
(+1 files in other folders)
